--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_image.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_image.scss
@@ -9,7 +9,7 @@
     color: $white;
 
     .pi-window-maximize {
-        font-size: $font-size-xxl;
+        font-size: $font-size-xl;
     }
 }
 
@@ -43,7 +43,7 @@
     }
 
     i {
-        font-size: $font-size-xl;
+        font-size: $font-size-lg;
     }
 
     .p-icon {
