--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_calendar.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_calendar.scss
@@ -123,7 +123,7 @@
                 .p-datepicker-year,
                 .p-datepicker-month,
                 .p-datepicker-decade {
-                    font-size: $font-size-lg;
+                    font-size: $font-size-lmd;
                     font-family: $font-default;
                     font-weight: $font-weight-regular-bold;
                     color: inherit;
