--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
@@ -53,7 +53,6 @@
     flex: 0 0 25%;
     gap: $spacing-1;
     padding: $spacing-3;
-    padding-right: 0;
     &.empty {
         padding-left: 0;
     }
@@ -69,7 +68,7 @@
 
 .category-field__selected-categories-list {
     overflow-y: auto;
-    scrollbar-gutter: stable;
+    scrollbar-gutter: auto;
 }
 
 :host ::ng-deep .p-sidebar-content {
