--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-checkbox-field/dot-edit-content-checkbox-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-checkbox-field/dot-edit-content-checkbox-field.component.html
@@ -1,7 +1,8 @@
-<p-checkbox
-    *ngFor="let option of options; let i = index"
-    [name]="field.variable"
-    [formControl]="formControl"
-    [value]="option.value"
-    [label]="option.label"
-    [inputId]="option.value + i"></p-checkbox>
+@for (option of options; track $index) {
+    <p-checkbox
+        [name]="field.variable"
+        [formControl]="formControl"
+        [value]="option.value"
+        [label]="option.label"
+        [inputId]="option.value + $index"></p-checkbox>
+}
