--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_calendar.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_calendar.scss
@@ -42,6 +42,8 @@
         height: auto;
         aspect-ratio: 1/1;
         background-color: $color-palette-gray-200;
+        color: $color-palette-primary;
+        border-radius: 0 $border-radius-sm $border-radius-sm 0;
 
         .pi {
             width: $icon-lg-box;
@@ -139,6 +141,7 @@
                 height: $field-height-md;
                 width: $field-height-md;
                 border-radius: 50%;
+                color: $color-palette-primary-500;
 
                 @extend #outlined-primary-severity;
             }
@@ -156,6 +159,7 @@
                 display: flex;
                 gap: $spacing-1;
             }
+
             td,
             th {
                 border-spacing: 0;
@@ -190,6 +194,15 @@
         gap: $spacing-0;
         border-top: 1px solid $color-palette-gray-300;
         padding: $spacing-3;
+
+        button {
+            width: $icon-lg-box;
+            height: auto;
+            aspect-ratio: 1/1;
+            font-size: $icon-lg;
+            color: $color-palette-primary-500;
+        }
+
         span {
             font-size: $font-size-md;
             font-weight: $font-weight-regular-bold;
@@ -199,15 +212,8 @@
             justify-content: center;
             align-content: center;
             flex-wrap: wrap;
-
-            &.pi {
-                width: $icon-lg-box;
-                height: auto;
-                aspect-ratio: 1/1;
-                font-size: $icon-lg;
-                color: $color-palette-primary-500;
-            }
         }
+
         button {
             border-radius: $border-radius-sm;
 
@@ -243,10 +249,11 @@ p-calendar.p-calendar-clearable {
 
     .p-calendar-clear-icon {
         margin-top: -0.438rem;
-        color: $color-palette-gray-500;
+        color: $color-palette-primary;
         width: $icon-lg-box;
         font-size: $icon-lg;
         right: 44px;
+
         &:hover {
             color: $color-palette-primary-600;
         }
