--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-crumbtrail/dot-crumbtrail.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-crumbtrail/dot-crumbtrail.component.scss
@@ -1,35 +1,35 @@
 @use "variables" as *;
 
 :host ::ng-deep .p-breadcrumb {
-    ul li {
-        &:first-child {
-            font-size: $font-size-lmd;
-            a span.p-menuitem-text {
-                color: $black;
-                font-size: $font-size-lmd;
-                font-weight: $font-weight-regular-bold;
+    .p-breadcrumb-list {
+        li {
+            &:first-child {
+                font-size: $font-size-lg;
+                a span.p-menuitem-text {
+                    color: $black;
+                    font-size: $font-size-lg;
+                    font-weight: $font-weight-regular-bold;
+                }
             }
-        }
-
-        .p-menuitem-link[href] {
-            .p-menuitem-text {
-                font-size: $font-size-lmd;
+            .p-menuitem-link[href] {
+                .p-menuitem-text {
+                    font-size: $font-size-lg;
+                }
             }
-        }
-
-        &:last-child a {
-            pointer-events: none;
-        }
-        &:nth-child(2) {
-            &::before {
-                content: "";
-                width: 1px;
-                height: 20px;
-                background: $color-palette-gray-500;
-                display: block;
+            &:last-child a {
+                pointer-events: none;
             }
-            .p-icon-wrapper {
-                display: none;
+            &:nth-child(2) {
+                &::before {
+                    content: "";
+                    width: 1px;
+                    height: 20px;
+                    background: $color-palette-gray-500;
+                    display: block;
+                }
+                .p-icon-wrapper {
+                    display: none;
+                }
             }
         }
     }
