remove outline in dropdown placeholder + remove autoDisplayFirst since is not needed

--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_dropdown.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_dropdown.scss
@@ -41,6 +41,12 @@ p-dropdown.ng-dirty.ng-invalid > .p-dropdown {
     .p-dropdown-label {
         padding-right: $spacing-1;
         @include truncate-text;
+
+        &:focus,
+        &:enabled:focus {
+            outline: 0 none;
+            box-shadow: none;
+        }
     }
 
     &:has(.p-dropdown-clear-icon) {
